--- a/PetTrack/Templates/WelcomeEmailTemplate.html
+++ b/PetTrack/Templates/WelcomeEmailTemplate.html
@@ -130,7 +130,7 @@
 <body>
     <div class="email-container">
         <div class="email-header">
-            <img src="https://i.postimg.cc/mD83rGnw/logo1-removebg-preview.png" alt="PetTrack Logo" />
+            <img src="https://i.postimg.cc/TYJ0W7b3/logo.jpg" alt="PetTrack Logo" />
             <h1>Chào mừng đến với PetTrack! 🐾</h1>
         </div>
 
